Fix handledomevent to work with custom eventts in XUL. r=jag, sr=hewitt, bug 109831